--- a/Report.qmd
+++ b/Report.qmd
@@ -495,10 +495,10 @@ However, there would be some additional validation methods that were used to val
     #Check for missing data
     na_advertisement_ad_id <- advertisement[is.na(advertisement$ad_id), 
                                             "ad_id"]
-    na_advertisement_ad_frequency <- advertisement[is.na(advertisement$ad_frequency), 
-                                                   c("ad_id", "ad_frequency")]
-    na_advertisement_ad_price <- advertisement[is.na(advertisement$ad_price), 
-                                               c("ad_id", "ad_price")]
+    na_advertisement_ad_frequency <- advertisement[is.na(
+      advertisement$ad_frequency), c("ad_id", "ad_frequency")]
+    na_advertisement_ad_price <- advertisement[
+      is.na(advertisement$ad_price), c("ad_id", "ad_price")]
     na_advertisement_ad_place <- advertisement[is.na(advertisement$ad_place), 
                                                c("ad_id", "ad_place")]
 
@@ -511,7 +511,8 @@ However, there would be some additional validation methods that were used to val
                                          na_advertisement_ad_frequency$ad_id,
                                          na_advertisement_ad_price$ad_id,
                                          na_advertisement_ad_place$ad_id))
-    advertisement <- advertisement[!(advertisement$ad_id %in% bad_advertisement_record),
+    advertisement <- advertisement[!(advertisement$ad_id %in% 
+                                       bad_advertisement_record),
                                    ]
     ```
 
@@ -527,22 +528,34 @@ However, there would be some additional validation methods that were used to val
 
     ```{r}
     #Check duplicate pk
-    duplicate_supplier_id <- supplier[duplicated(supplier$supplier_id), "supplier_id"]
+    duplicate_supplier_id <- supplier[duplicated(supplier$supplier_id), 
+                                      "supplier_id"]
 
     #Check supplier (can contain alphabets, comma, hyphen, dot)
-    invalid_supplier_name <- supplier[!grepl("^[A-Za-z,.-]+( [A-Za-z,.-]+)*$", supplier$supplier_name), c("supplier_id", "supplier_name")]
+    invalid_supplier_name <- supplier[!grepl(
+      "^[A-Za-z,.-]+( [A-Za-z,.-]+)*$", 
+          supplier$supplier_name), 
+      c("supplier_id", "supplier_name")]
 
     #Check email format
-    invalid_supplier_email <- supplier[!grepl("^[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\\.[A-Za-z]{2,}$", supplier$supplier_email), c("supplier_id", "supplier_email")]
+    invalid_supplier_email <- supplier[!grepl(
+      "^[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\\.[A-Za-z]{2,}$", 
+      supplier$supplier_email), c("supplier_id", "supplier_email")]
 
     #Check format of mobile number (+xx xxx xxx xxxx)
-    invalid_supplier_mobile <- supplier[!grepl("^^\\+\\d{1,3}\\s[0-9]{3}\\s[0-9]{3}\\s[0-9]{4}$", supplier$supplier_mobile), c("supplier_id", "supplier_mobile")]
+    invalid_supplier_mobile <- supplier[!grepl(
+      "^^\\+\\d{1,3}\\s[0-9]{3}\\s[0-9]{3}\\s[0-9]{4}$", 
+      supplier$supplier_mobile), c("supplier_id", "supplier_mobile")]
 
     #Check for missing data
-    na_supplier_supplier_id <- supplier[is.na(supplier$supplier_id), "supplier_id"]
-    na_supplier_supplier_name <- supplier[is.na(supplier$supplier_name), c("supplier_id", "supplier_name")]
-    na_supplier_supplier_email <- supplier[is.na(supplier$supplier_email), c("supplier_id", "supplier_email")]
-    na_supplier_supplier_mobile <- supplier[is.na(supplier$supplier_mobile), c("supplier_id", "supplier_mobile")]
+    na_supplier_supplier_id <- supplier[is.na(supplier$supplier_id), 
+                                        "supplier_id"]
+    na_supplier_supplier_name <- supplier[is.na(supplier$supplier_name), 
+                                          c("supplier_id", "supplier_name")]
+    na_supplier_supplier_email <- supplier[is.na(supplier$supplier_email), 
+                                          c("supplier_id", "supplier_email")]
+    na_supplier_supplier_mobile <- supplier[is.na(supplier$supplier_mobile), 
+                                          c("supplier_id", "supplier_mobile")]
 
     #Remove unclean data
     bad_supplier_record <- unique(c(duplicate_supplier_id$supplier_id,
@@ -564,21 +577,29 @@ However, there would be some additional validation methods that were used to val
 
     ```{r}
     #Check duplicate pk
-    duplicate_category_id <- category[duplicated(category$category_id), "category_id"]
+    duplicate_category_id <- category[duplicated(category$category_id), 
+                                      "category_id"]
 
     #Check category (can contain alphabets)
-    invalid_category_name <- category[!grepl("^[A-Za-z]+( [A-Za-z]+)*$", category$category_name), c("category_id", "category_name")]
+    invalid_category_name <- category[!grepl(
+      "^[A-Za-z]+( [A-Za-z]+)*$", category$category_name), 
+      c("category_id", "category_name")]
 
     #Check for duplicate category name
-    duplicate_category_name <- category[duplicated(category$category_name), c("category_id", "category_name")]
+    duplicate_category_name <- category[duplicated(category$category_name), 
+                                        c("category_id", "category_name")]
 
     #Check for negative prices
-    negative_category_fee <- category[category$category_fee < 0, c("category_id", "category_fee")]
+    negative_category_fee <- category[category$category_fee < 0, 
+                                      c("category_id", "category_fee")]
 
     #Check for missing data
-    na_category_category_id <- category[is.na(category$category_id), "category_id"]
-    na_category_category_name <- category[is.na(category$category_name), c("category_id", "category_name")]
-    na_category_category_fee <- category[is.na(category$category_fee), c("category_id", "category_fee")]
+    na_category_category_id <- category[is.na(category$category_id), 
+                                        "category_id"]
+    na_category_category_name <- category[is.na(category$category_name), 
+                                          c("category_id", "category_name")]
+    na_category_category_fee <- category[is.na(category$category_fee), 
+                                         c("category_id", "category_fee")]
 
     #Remove unclean data
     bad_category_record <- unique(c(duplicate_category_id$category_id,
@@ -605,27 +626,44 @@ However, there would be some additional validation methods that were used to val
 
     ```{r}
     #Check duplicate pk
-    duplicate_customer_id <- customer[duplicated(customer$customer_id), "customer_id"]
+    duplicate_customer_id <- customer[duplicated(customer$customer_id), 
+                                      "customer_id"]
 
-    #Check format of first and last name (1st alphabet is uppercase, rest is lowercase)
-    invalid_customer_firstname <- customer[!grepl("^[A-Z][a-z]*$", customer$first_name), c("customer_id", "first_name")]
-    invalid_customer_lastname <- customer[!grepl("^[A-Z][a-z]*$", customer$last_name), c("customer_id", "last_name")]
+    #Check format of first and last name (1st alphabet is uppercase, 
+    #rest is lowercase)
+    invalid_customer_firstname <- customer[!grepl(
+      "^[A-Z][a-z]*$", customer$first_name), 
+      c("customer_id", "first_name")]
+    invalid_customer_lastname <- customer[!grepl(
+      "^[A-Z][a-z]*$", customer$last_name), 
+      c("customer_id", "last_name")]
 
     #Check email format
-    invalid_customer_email <- customer[!grepl("^[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\\.[A-Za-z]{2,}$", customer$customer_email), c("customer_id", "customer_email")]
+    invalid_customer_email <- customer[!grepl(
+      "^[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\\.[A-Za-z]{2,}$", 
+      customer$customer_email), c("customer_id", "customer_email")]
 
     #Check format of mobile number (+xx xxx xxx xxxx)
-    invalid_customer_mobile <- customer[!grepl("^\\+\\d{1,3}\\s[0-9]{3}\\s[0-9]{3}\\s[0-9]{4}$", customer$customer_mobile), c("customer_id", "customer_mobile")]
+    invalid_customer_mobile <- customer[!grepl(
+      "^\\+\\d{1,3}\\s[0-9]{3}\\s[0-9]{3}\\s[0-9]{4}$", 
+      customer$customer_mobile), c("customer_id", "customer_mobile")]
 
     #Check if address_id exists in the ADDRESS table
-    invalid_address_fk <- customer[!customer$address_id %in% address$address_id, c("customer_id", "address_id")]
+    invalid_address_fk <- customer[!customer$address_id %in% 
+                                     address$address_id, 
+                                   c("customer_id", "address_id")]
 
     #Check for missing data
-    na_customer_customer_id <- customer[is.na(customer$customer_id), "customer_id"]
-    na_customer_first_name <- customer[is.na(customer$first_name), c("customer_id", "first_name")]
-    na_customer_last_name <- customer[is.na(customer$last_name), c("customer_id", "last_name")]
-    na_customer_customer_email <- customer[is.na(customer$customer_email), c("customer_id", "customer_email")]
-    na_customer_customer_mobile <- customer[is.na(customer$customer_mobile), c("customer_id", "customer_mobile")]
+    na_customer_customer_id <- customer[is.na(customer$customer_id), 
+                                        "customer_id"]
+    na_customer_first_name <- customer[is.na(customer$first_name), 
+                                      c("customer_id", "first_name")]
+    na_customer_last_name <- customer[is.na(customer$last_name), 
+                                      c("customer_id", "last_name")]
+    na_customer_customer_email <- customer[is.na(customer$customer_email), 
+                                      c("customer_id", "customer_email")]
+    na_customer_customer_mobile <- customer[is.na(customer$customer_mobile), 
+                                      c("customer_id", "customer_mobile")]
 
     #Remove unclean data
     bad_customer_record <- unique(c(duplicate_customer_id$customer_id,
@@ -643,8 +681,6 @@ However, there would be some additional validation methods that were used to val
 
     ```
 
-<!-- -->
-
 7.  PRODUCT
 
     Additional validation method:
@@ -659,36 +695,54 @@ However, there would be some additional validation methods that were used to val
 
         ```{r}
         #Check duplicate pk
-        duplicate_product_id <- product[duplicated(product$product_id), "product_id"]
+        duplicate_product_id <- product[duplicated(product$product_id), 
+                                        "product_id"]
 
         #Check product name (can contain alphabets, comma, hyphen, dot)
-        invalid_product_name <- product[!grepl("^[A-Za-z,.-]+( [A-Za-z,.-]+)*$", product$product_name), c("product_id", "product_name")]
+        invalid_product_name <- product[!grepl(
+          "^[A-Za-z,.-]+( [A-Za-z,.-]+)*$", product$product_name), 
+          c("product_id", "product_name")]
 
         #Check for negative prices
-        negative_unit_prices <- product[product$unit_price < 0, c("product_id", "unit_price")]
+        negative_unit_prices <- product[product$unit_price < 0, 
+                                        c("product_id", "unit_price")]
 
         #Check invalid stock
-        invalid_stock <- product[!grepl("^[0-9]+$", product$stock_on_hand), c("product_id", "stock_on_hand")]
-        negative_stock <- product[product$stock_on_hand < 0, c("product_id", "stock_on_hand")]
+        invalid_stock <- product[!grepl("^[0-9]+$", product$stock_on_hand), 
+                                 c("product_id", "stock_on_hand")]
+        negative_stock <- product[product$stock_on_hand < 0, 
+                                c("product_id", "stock_on_hand")]
 
         #Check if supplier_id exists in the SUPPLIER table
-        invalid_supplier_fk <- product[!product$supplier_id %in% supplier$supplier_id, c("product_id", "supplier_id")]
+        invalid_supplier_fk <- product[!product$supplier_id %in% 
+                                         supplier$supplier_id, 
+                                       c("product_id", "supplier_id")]
 
         #Check if category_id exists in the CATEGORY table
-        invalid_category_fk <- product[!product$category_id %in% category$category_id, c("product_id", "category_id")]
+        invalid_category_fk <- product[!product$category_id %in% 
+                                        category$category_id, 
+                                       c("product_id", "category_id")]
 
-        #Check if main product is self referential and it cannot be the same as product_id
+        #Check if main product is self referential and 
+        #it cannot be the same as product_id
         invalid_main_product_ids <- product[!is.na(product$main_product_id) & 
-                                              !(product$main_product_id %in% product$product_id & 
-                                                  product$main_product_id != product$product_id), c("product_id", "main_product_id")]
+                  !(product$main_product_id %in% product$product_id & 
+                    product$main_product_id != product$product_id), 
+                  c("product_id", "main_product_id")]
 
         #Check for missing data
-        na_product_product_id <- product[is.na(product$product_id), "product_id"]
-        na_product_category_id <- product[is.na(product$category_id), c("product_id", "category_id")]
-        na_product_supplier_id <- product[is.na(product$supplier_id), c("product_id", "supplier_id")]
-        na_product_product_name <- product[is.na(product$product_name), c("product_id", "product_name")]
-        na_product_unit_price <- product[is.na(product$unit_price), c("product_id", "unit_price")]
-        na_product_stock_on_hand <- product[is.na(product$stock_on_hand), c("product_id", "stock_on_hand")]
+        na_product_product_id <- product[is.na(product$product_id), 
+                                         "product_id"]
+        na_product_category_id <- product[is.na(product$category_id), 
+                                          c("product_id", "category_id")]
+        na_product_supplier_id <- product[is.na(product$supplier_id), 
+                                          c("product_id", "supplier_id")]
+        na_product_product_name <- product[is.na(product$product_name), 
+                                          c("product_id", "product_name")]
+        na_product_unit_price <- product[is.na(product$unit_price), 
+                                         c("product_id", "unit_price")]
+        na_product_stock_on_hand <- product[is.na(product$stock_on_hand), 
+                                         c("product_id", "stock_on_hand")]
 
         #Remove unclean data
         bad_product_record <- unique(c(duplicate_product_id$product_id,
@@ -722,36 +776,53 @@ However, there would be some additional validation methods that were used to val
 
     ```{r}
     #Check duplicate pk
-    duplicate_order_id <- order_detail[duplicated(order_detail$order_id), "order_id"]
+    duplicate_order_id <- order_detail[duplicated(order_detail$order_id), 
+                                       "order_id"]
 
     #Check if customer_id exists in the CUSTOMER table
-    invalid_customer_fk <- order_detail[!order_detail$customer_id %in% customer$customer_id, "order_id"]
+    invalid_customer_fk <- order_detail[!order_detail$customer_id %in% 
+                                          customer$customer_id, "order_id"]
 
     #Check if promo_code exists in the DISCOUNT table
     discounted_order <- order_detail[!is.na(order_detail$promo_code), ]
-    invalid_promo_fk <- discounted_order[!discounted_order$promo_code %in% discount$promo_code, c("order_id", "promo_code")]
+    invalid_promo_fk <- discounted_order[!discounted_order$promo_code %in% 
+                                           discount$promo_code, 
+                                         c("order_id", "promo_code")]
 
     #Check order status
     status <- c("Pending", "Paid", "Shipped", "Completed", "Cancelled")
-    invalid_order_status <- order_detail[!order_detail$order_status %in% status, c("order_id", "order_status")]
+    invalid_order_status <- order_detail[!order_detail$order_status %in% 
+                                           status, c("order_id", 
+                                                     "order_status")]
 
     #Check payment method
     payment <- c("Mastercard", "Visa", "Amex")
-    invalid_payment_method <- order_detail[!order_detail$payment_method %in% payment, c("order_id", "payment_method")]
+    invalid_payment_method <- order_detail[!order_detail$payment_method %in% 
+                                             payment, c("order_id", 
+                                                        "payment_method")]
 
     #Check date format (dd/mm/yyyy)
-    invalid_order_date <- order_detail[!grepl("^\\d{2}/\\d{2}/\\d{4}$", order_detail$order_date), c("order_id", "order_date")]
+    invalid_order_date <- order_detail[!grepl("^\\d{2}/\\d{2}/\\d{4}$", 
+                                              order_detail$order_date), 
+                                          c("order_id", "order_date")]
 
     #Check for negative delivery fee
-    negative_delivery_fee <- order_detail[order_detail$delivery_fee < 0, c("order_id", "delivery_fee")]
+    negative_delivery_fee <- order_detail[order_detail$delivery_fee < 0, 
+                                          c("order_id", "delivery_fee")]
 
     #Check for missing data
-    na_order_order_id <- order_detail[is.na(order_detail$order_id), "order_id"]
-    na_order_customer_id <- order_detail[is.na(order_detail$customer_id), c("order_id", "customer_id")]
-    na_order_order_status <- order_detail[is.na(order_detail$order_status), c("order_id", "order_status")]
-    na_order_order_date <- order_detail[is.na(order_detail$order_date), c("order_id", "order_date")]
-    na_order_payment_method <- order_detail[is.na(order_detail$payment_method), c("order_id", "payment_method")]
-    na_order_delivery_fee <- order_detail[is.na(order_detail$delivery_fee), c("order_id", "delivery_fee")]
+    na_order_order_id <- order_detail[is.na(order_detail$order_id), 
+                                      "order_id"]
+    na_order_customer_id <- order_detail[is.na(order_detail$customer_id), 
+                                        c("order_id", "customer_id")]
+    na_order_order_status <- order_detail[is.na(order_detail$order_status), 
+                                        c("order_id", "order_status")]
+    na_order_order_date <- order_detail[is.na(order_detail$order_date), 
+                                        c("order_id", "order_date")]
+    na_order_payment_method <- order_detail[is.na(order_detail$payment_method), 
+                                        c("order_id", "payment_method")]
+    na_order_delivery_fee <- order_detail[is.na(order_detail$delivery_fee), 
+                                        c("order_id", "delivery_fee")]
 
     #Remove unclean data
     bad_order_record <- unique(c(duplicate_order_id$order_id,
@@ -767,7 +838,8 @@ However, there would be some additional validation methods that were used to val
                                  na_order_order_date$order_id,
                                  na_order_payment_method$order_id,
                                  na_order_delivery_fee$order_id))
-    order_detail <- order_detail[!(order_detail$order_id %in% bad_order_record), ]
+    order_detail <- order_detail[!(order_detail$order_id %in% 
+                                     bad_order_record), ]
     ```
 
 9.  ORDER_DETAIL
@@ -779,26 +851,39 @@ However, there would be some additional validation methods that were used to val
     ```{r}
     #Check duplicate for composite primary key
     order_item_composite <- paste(order_item$order_id, order_item$product_id)
-    duplicate_order_item_composite <- order_item[duplicated(order_item_composite), c("order_id", "product_id")]
+    duplicate_order_item_composite <- order_item[duplicated(
+      order_item_composite), c("order_id", "product_id")]
 
     #Check if order_id exists in the ORDER_ITEM table
-    invalid_order_fk <- order_item[!order_item$order_id %in% order_detail$order_id, c("order_id", "product_id")]
+    invalid_order_fk <- order_item[!order_item$order_id %in% 
+                                     order_detail$order_id, 
+                                   c("order_id", "product_id")]
 
     #Check if product_id exists in the PRODUCT table
-    invalid_product_fk <- order_item[!order_item$product_id %in% product$product_id, c("order_id", "product_id")]
+    invalid_product_fk <- order_item[!order_item$product_id %in% 
+                                       product$product_id, 
+                                     c("order_id", "product_id")]
 
     #Check invalid order quantity
-    invalid_quantity <- order_item[!grepl("^[0-9]+$", order_item$order_quantity), c("order_id", "order_quantity")]
-    negative_zero_quantity <- order_item[order_item$order_quantity < 1, c("order_id", "order_quantity")]
+    invalid_quantity <- order_item[!grepl("^[0-9]+$", 
+                                          order_item$order_quantity), 
+                                   c("order_id", "order_quantity")]
+    negative_zero_quantity <- order_item[order_item$order_quantity < 1, 
+                                    c("order_id", "order_quantity")]
 
     #Check for missing data
-    na_order_item_order_id <- order_item[is.na(order_item$order_id), "order_id"]
-    na_order_item_product_id <- order_item[is.na(order_item$order_id), c("order_id", "product_id")]
-    na_order_item_order_quantity <- order_item[is.na(order_item$order_quantity), c("order_id", "order_quantity")]
+    na_order_item_order_id <- order_item[is.na(order_item$order_id), 
+                                         "order_id"]
+    na_order_item_product_id <- order_item[is.na(order_item$order_id), 
+                                          c("order_id", "product_id")]
+    na_order_item_order_quantity <- order_item[is.na(
+                                          order_item$order_quantity), 
+                                          c("order_id", "order_quantity")]
 
     #Remove unclean data
     bad_order_item_record <- unique(c())
-    order_item <- order_item[!(order_item$order_id %in% bad_order_item_record), ]
+    order_item <- order_item[!(order_item$order_id %in% 
+                                 bad_order_item_record), ]
 
     #Remove unclean data
     # Combine all unclean data
@@ -815,25 +900,35 @@ However, there would be some additional validation methods that were used to val
     bad_order_item_record <- unique(bad_order_item_record)
 
     # Remove unclean data based on composite key
-    order_item <- order_item[!paste(order_item$order_id, order_item$product_id) %in% paste(bad_order_item_record$order_id, bad_order_item_record$product_id), ]
+    order_item <- order_item[!paste(order_item$order_id, 
+                                    order_item$product_id) 
+                             %in% paste(bad_order_item_record$order_id, 
+                                        bad_order_item_record$product_id), ]
     ```
 
 10. ADVERTISE_IN
 
     ```{r}
     #Check duplicate for composite primary key
-    advertise_in_composite <- paste(advertise_in$ad_id, advertise_in$product_id)
-    duplicate_advertise_in_composite <- advertise_in[duplicated(advertise_in_composite), c("ad_id", "product_id")]
+    advertise_in_composite <- paste(advertise_in$ad_id, 
+                                    advertise_in$product_id)
+    duplicate_advertise_in_composite <- advertise_in[duplicated(
+      advertise_in_composite), c("ad_id", "product_id")]
 
     #Check if ad_id exists in the ADVERTISEMENT table
-    invalid_advertisement_fk <- advertise_in[!advertise_in$ad_id %in% advertisement$ad_id, c("ad_id", "product_id")]
+    invalid_advertisement_fk <- advertise_in[!advertise_in$ad_id %in% 
+                                               advertisement$ad_id, 
+                                             c("ad_id", "product_id")]
 
     #Check if product_id exists in the PRODUCT table
-    invalid_product_fk <- advertise_in[!advertise_in$product_id %in% product$product_id, c("ad_id", "product_id")]
+    invalid_product_fk <- advertise_in[!advertise_in$product_id %in% 
+                                         product$product_id, 
+                                       c("ad_id", "product_id")]
 
     #Check for missing data
     na_advertise_in_ad_id <- advertise_in[is.na(advertise_in$ad_id), "ad_id"]
-    na_advertise_in_product_id <- advertise_in[is.na(advertise_in$product_id), c("ad_id", "product_id")]
+    na_advertise_in_product_id <- advertise_in[is.na(advertise_in$product_id), 
+                                               c("ad_id", "product_id")]
 
     #Remove unclean data
     # Combine all unclean data
@@ -847,17 +942,20 @@ However, there would be some additional validation methods that were used to val
     bad_advertise_in_record <- unique(bad_advertise_in_record)
 
     # Remove unclean data based on composite key
-    advertise_in <- advertise_in[!paste(advertise_in$ad_id, advertise_in$product_id) %in% paste(bad_advertise_in_record$ad_id, bad_advertise_in_record$product_id), ]
+    advertise_in <- advertise_in[!paste(advertise_in$ad_id, 
+                                        advertise_in$product_id) %in% 
+                                   paste(bad_advertise_in_record$ad_id, bad_advertise_in_record$product_id), ]
     ```
 
 Once the dataset was validated, it was imported to the database, where the schema is already created.
 
-```{r}
+```{r message=FALSE}
 #add new records into table
 connect <- dbConnect(RSQLite::SQLite(), "database.db")
 
-tables <- c("CUSTOMER", "ADDRESS", "CATEGORY", "SUPPLIER", "PRODUCT", "DISCOUNT", 
-            "ORDER_ITEM", "ORDER_DETAIL", "ADVERTISEMENT", "ADVERTISE_IN")
+tables <- c("CUSTOMER", "ADDRESS", "CATEGORY", "SUPPLIER", "PRODUCT", 
+            "DISCOUNT", "ORDER_ITEM", "ORDER_DETAIL", "ADVERTISEMENT", 
+            "ADVERTISE_IN")
 
 table_new <- list(customer, address, category, supplier, product, discount, 
                   order_item, order_detail, advertisement, advertise_in)
