--- a/Report.qmd
+++ b/Report.qmd
@@ -10,11 +10,11 @@ The major difference between ELT and ETL is that in the ELT stage, normalization
 
 In our work, we chose ETL (Extract, Transform, Load) instead of ELT as our workflow and used SQL and R interchangeably to perform transformations. This is because we have found that ETL workflow is more suitable for small data sets, so we thought that it would be more compromised with our work.
 
-## Part 1: Database Design and Implementation
+# Part 1: Database Design and Implementation
 
-### Task 1.1: E-R Diagram
+## Task 1.1: E-R Diagram
 
-#### Entities
+**Entities**
 
 Our E-R Diagram for an E-commerce database consisted of five main entities:
 
@@ -24,7 +24,7 @@ Our E-R Diagram for an E-commerce database consisted of five main entities:
 4.  SUPPLIER: Represents details of entities providing products to businesses or customers, including attributes such as supplier ID, supplier name, and contact information. 
 5.  CATEGORY: Represents product classifications or groupings, including attributes such as category unique ID, name, and fee amount as a percentage.
 
-#### Relationships
+**Relationships**
 
 The relationships among these entities are as follows: 
 
@@ -54,9 +54,9 @@ As a result, this is our E-R diagram.
 
 ![](images/E-R%20Diagram(Final)-Before%20Final.drawio.png)
 
-### Task 1.2: SQL Database Schema Creation
+## Task 1.2: SQL Database Schema Creation
 
-#### Normalization:
+**Normalization:**
 
 According to our first draft of the E-R diagram, two main adjustments were made in order to comply with 3NF
 
@@ -90,27 +90,9 @@ In summary, four new entities were created from the normalization, which were OR
 
 According to the E-R diagram and normalization s, we can list the logical schema as follows:
 
--   ADDRESS([address_id]{.underline}, postcode, street, city, country)
+![](images/Logical_Schema.png){width="553"}
 
--   DISCOUNT([promo_code]{.underline}, discount_amount)
-
--   ADVERTISEMENT([ad_id]{.underline}, ad_frequency, ad_place, ad_price) 
-
--   SUPPLIER([supplier_id]{.underline}, supplier_name, email, mobile_no) 
-
--   CATEGORY([category_id,]{.underline} category_name, category_fee)
-
--   CUSTOMER([customer_id]{.underline}, first_name, last_name, gender, email, mobile_no, address_id)
-
--   PRODUCT([product_id]{.underline}, product_name, product_description, product_rating, unit_price, stock_at_hand, main_product_id, category_id, supplier_id) 
-
--   ORDER_DETAIL([order_id,]{.underline} customer_id, order_date, order_status, promo_code, payment_method, delivery_fee)
-
--   ORDER_ITEM([order_id]{.underline}, product_id, quantity)
-
--   ADVERTISE_IN([product_id]{.underline}, ad_id)
-
-#### Physical Schema
+**Physical Schema**
 
 ```{r, echo=FALSE,warning=FALSE,message=FALSE}
 
@@ -202,8 +184,6 @@ Then, we created entities that are children entities and entities that have refe
       );
     ```
 
-<!-- -->
-
 7.  Create PRODUCT entity
 
     ```{sql connection=connect}
@@ -263,9 +243,9 @@ Then, we created entities that are children entities and entities that have refe
     );
     ```
 
-## Part 2: Data Generation and Implementation
+# Part 2: Data Generation and Implementation
 
-### Task 2.1: Synthetic Data Generation
+## Task 2.1: Synthetic Data Generation
 
 The synthetic data of each table was created based on the normalised schema using Mockaroo, a mock data generator platform. We first generated the data for the parent entities to ensure that the referential integrity exists on the children entities or the entities that need a reference for foreign keys from parent entities
 
@@ -375,9 +355,9 @@ We have set the order_id, which is the primary of the table, to start with 'ORD'
 
 ![](images/ADVERTISE_IN%20DATA%20GEN.png)
 
-### Task 2.2: Data Import and Quality Assurance
+## Task 2.2: Data Import and Quality Assurance
 
-#### Data Import
+**Data Import**
 
 Loading all generated data sets using read_csv to each entity
 
@@ -394,7 +374,7 @@ advertisement <- readr::read_csv("data_upload/ADVERTISEMENT.csv")
 advertise_in <- readr::read_csv("data_upload/ADVERTISE_IN.csv")
 ```
 
-#### Quality Assurance
+**Quality Assurance**
 
 The imported data sets were validated before being added to the database to ensure they aligned with the nature of the keys and data type specified in the physical schema. First, we validated parent entities including ADDRESS, DISCOUNT, ADVERTISEMENT, SUPPLIER, CATEGORY. Once all parent entities were validated, we continued validating children entities CUSTOMER, PRODUCT, ORDER_ITEM, ORDER_DETAIL, and ADVERTISE_IN.
 
@@ -983,9 +963,9 @@ for (i in seq_along(tables)) {
   }}
 ```
 
-## Part 3: Data Pipeline Generation
+# Part 3: Data Pipeline Generation
 
-### Task 3.1: GitHub Repository and Workflow Setup
+## Task 3.1: GitHub Repository and Workflow Setup
 
 We first created a new public repository named **DM_Group3** on GitHub and created the following files:
 
@@ -1000,7 +980,7 @@ Secondly, we create a new project in RStudio and connect it to Git for version c
 
 For setting up workflow, as GitHub Actions can automate workflows, such as running tests, building, and deploying tasks after pushing code, which can improve development efficiency and ensure code stability, we created the **.github/workflows** directory and an **etl.yaml** file within it.
 
-### Task 3.2: Data Import and Quality Assurance
+## Task 3.2: GitHub Actions for Continuous Integration
 
 Our GitHub Actions workflow was designed to execute a task named "ETL workflow for group 3.", triggering by pushing events to the 'main' branch. In this part, we defined a sequence of steps to be executed on the latest version of Ubuntu:
 
@@ -1013,9 +993,9 @@ Our GitHub Actions workflow was designed to execute a task named "ETL workflow f
 7.  Run data_analysis.Rmd to render data analysis.
 8.  Utilize an authentication token to push changes to the 'main' branch.
 
-## Part 4: Data Analysis and Reporting with Quarto in R
+# Part 4: Data Analysis and Reporting with Quarto in R
 
-### Task 4.1: Advanced Data Analysis in R
+## Task 4.1: Advanced Data Analysis in R
 
 ```{r}
 library(DBI)
